trying out a fix for the vertical scrollbar hiding from this issue https://github.com/tannerlinsley/react-table/issues/495

--- a/src/DataTable/style.css
+++ b/src/DataTable/style.css
@@ -402,3 +402,22 @@
   width: 10px;
   right: -5px;
 }
+
+.rt-table {
+  overflow: hidden !important;
+}
+
+.rt-tbody {
+  min-width: 0px !important;
+}
+.rt-thead {
+  min-width: 0px !important;
+  overflow: hidden !important;
+}
+
+.rt-tr-group {
+  min-width: 0px !important;
+}
+.vertical-scrollbar-present {
+  width: calc(100% - 15px) !important;
+}
